--- a/css/style-three.css
+++ b/css/style-three.css
@@ -236,6 +236,7 @@ h3.moto-name {
 
   .newest h1{
       padding: 120px 50px 50px 50px;
+      text-shadow: 0px 0px 10px rgb(255, 255, 255, 0.7);
   }
 
   .sub-head h2{
