--- a/css/style-two.css
+++ b/css/style-two.css
@@ -45,6 +45,7 @@ p.main-descp{
     margin-left: 5px;
     box-shadow: 2px 2px 10px 3px #6b6b6b;
     width: 160px;
+    border-radius: 20px 0 20px 0px;
     text-align: center;
     -webkit-transition: all 0.5s ease-in-out;
     -moz-transition: all 0 rgb(255, 137, 1).5s ease-in-out;
@@ -57,10 +58,14 @@ p.main-descp{
 
 
 /****BLOCKONE****/
+.service-head{
+  background-color:rgb(255, 137, 1) ;
+  box-shadow: 0px 3px 15px rgb(46, 46, 46);
+  border-radius: 0px 50px 0px 50px;
+}
 
 .service-head h2{
     font-size: 60px;
-    background-color:rgb(255, 137, 1) ;
     color: #ffffff;
     text-align: center;
 }
