--- a/style.css
+++ b/style.css
@@ -398,8 +398,9 @@ h2.block-three-headline{
 }
 
 .partners-item{
-  width: 20%;
+  width: 25%;
   margin: 0 auto;
+  line-height: 8;
 }
 
 img.partner-logo{
