--- a/css/style-two.css
+++ b/css/style-two.css
@@ -524,7 +524,8 @@ a#gdpra{
     border: none;
     color: #fff;
     height: 36px;
-    padding: 0px 15px;
+    padding: 0px 25px;
+    margin-bottom: 50px;
     font-size: 14px;
     font-weight: 500;
     text-transform: uppercase;
@@ -550,12 +551,12 @@ a#gdpra{
   }
  
   a button#confirm{
-    color: #ffffff;
+    color: rgb(255, 137, 1);
     padding: 10px 40px;
   }
   
   button #confirm i {
-    color: #fff;
+    color: rgb(255, 137, 1);
   }
   
   button #confirm[disabled] {
@@ -769,8 +770,7 @@ i#form-icon {
     content: '';
     left: 0;
     position: absolute;
-    z-index: 1;
-  }
+    }
   
   [type="checkbox"]:not(:checked) + label:before {
     width: 0;
@@ -786,7 +786,7 @@ i#form-icon {
   [type="checkbox"]:not(:checked) + label:after {
     height: 12px;
     width: 12px;
-    background-color: #fff;
+    background-color: rgb(255, 137, 1);
     border: 1px solid #aaa;
     top: 12px;
     left: 4px;
@@ -796,9 +796,9 @@ i#form-icon {
   
   [type="checkbox"]:checked + label:before {
     content: '\e876';
-    top: 0px;
+    top: 10px;
     left: 3px;
-    font-size: 16px;
+    font-size: 25px;
     color: #fff;
     font-family: "Material Icons";
     transform: scale(1);
@@ -810,8 +810,8 @@ i#form-icon {
     left: 4px;
     width: 12px;
     height: 12px;
-    border: 1px solid rgb(255, 137, 1);
-    background-color: rgb(255, 137, 1);
+    border: 1px solid transparent;
+    background-color: transparent;
     transition: all 0.8s;
     z-index: 0;
   }
@@ -862,7 +862,7 @@ i#form-icon {
   }
   
   .ending.showed i {
-    color: #fff;
+    color: rgb(255, 137, 1);
     font-size: 60px;
     top: 0;
     transform: scale(1) rotate(0deg);
@@ -907,6 +907,10 @@ select{
     filter: drop-shadow(0 0 0.2rem rgb(197, 197, 197));
 }
 
+.st0{
+  fill:  #fff; 
+  stroke: rgba(0,0,0,0.2); 
+  stroke-width: 2px;}
 
 /****BLOCK-THREE*****/
 .person-container{
